Commit for Section 4 - Authentication basics

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -2,6 +2,7 @@
   "ConnectionStrings" : {
     "DefaultConnection" : "Data Source=.;Initial Catalog=dating_app;Integrated Security=True"
   },
+  "TokenKey": "butter coconut with peanut butter",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
